# refactored-chainsaw

./: cleanup.sh  live_config.yaml  logging_config.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agent/: advanced_charting.py  agent.py  agent_manager.py  alpaca_broker.py  analysis.py  analytics.py  broker_factory.py  broker_yfinance.py  config_validator.py  data_manager.py  database.py  database_schema.py  enhanced_ict.py  external_notifications.py  live_orders_manager.py  llm_market_analysis.py  llm_scanner.py  notifications.py  risk_manager.py  trading_journal.py
app/api/routes/: agent.py  ai.py  analysis.py  dashboard.py  instruments.py  journal.py  logs.py  portfolio.py
app/services/: agent_service.py  ai_service.py  analysis_service.py  dashboard_service.py  journal_service.py  log_service.py  portfolio_service.py
